[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Undertale Battle Royale.wav" type="AudioStream" id=3]
[ext_resource path="res://dpad.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 2 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.0
margin_top = 1.59442
margin_right = 91.0
margin_bottom = 169.594
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="vidas" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 184.911
margin_top = 55.4497
margin_right = 299.911
margin_bottom = 140.45
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vidastexto" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 170.991
margin_top = -18.57
margin_right = 321.991
margin_bottom = 74.43
custom_fonts/font = SubResource( 2 )
text = "Vidas"
align = 1
valign = 1

[node name="mensaje" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -198.0
margin_right = -21.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 3 )
text = "Alex vs 
el 
VirusxD"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -99.5
margin_top = -100.0
margin_right = 86.5
custom_fonts/font = SubResource( 4 )
text = "Jugar"
flat = true

[node name="TimerMensaje" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="musica1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Credits" type="Label" parent="."]
margin_right = 446.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 5 )
text = "By Alejandro Apodaca "

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Node2D" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="TimerMensaje" to="." method="_on_TimerMensaje_timeout"]
